force-app/main/default/objects/Share_of_Wallet_Product__c/Share_of_Wallet_Product__c.object-meta.xml
<CustomObject>
    <label>Share of Wallet Product</label>
    <nameField>
        <displayFormat>ShareWallet-{0000}</displayFormat>
        <label>Share of Wallet Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share of Wallet Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>