force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Budgeted number of this Product, for this financial year</description>
    <inlineHelpText>Budgeted number of this Product, for this financial year</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>