force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>Bank/s the Client prefers using for this Product (separate with commas)</description>
    <inlineHelpText>Bank/s the Client prefers using for this Product (separate with commas)</inlineHelpText>
    <label>Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>