force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Estimated_Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Share_of_Wallet__c</fullName>
    <description>Estimated Standard Bank Revenue / Estimated Total Wallet Size</description>
    <formula>If((OR(Nullvalue(Estimated_Standard_Bank_Revenue__c ,0)==0, Nullvalue(Estimated_Total_Wallet_Size__c,0)==0)), 
0, Estimated_Standard_Bank_Revenue__c  /  Estimated_Total_Wallet_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Standard Bank Revenue / Estimated Total Wallet Size</inlineHelpText>
    <label>Estimated Share of Wallet (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>