force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Estimated_Standard_Bank_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Standard_Bank_Revenue__c</fullName>
    <description>Estimated revenue Standard Bank makes from this Client on this Product</description>
    <inlineHelpText>Estimated revenue Standard Bank makes from this Client on this Product</inlineHelpText>
    <label>Estimated Standard Bank Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>