force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Estimated_Total_Wallet_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Wallet_Size__c</fullName>
    <description>The Client&apos;s Estimated Total Wallet Size for this Product</description>
    <inlineHelpText>The Client&apos;s Estimated Total Wallet Size for this Product</inlineHelpText>
    <label>Estimated Total Wallet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>