force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Product_Subset__c.field-meta.xml
<CustomField>
    <fullName>Product_Subset__c</fullName>
    <description>The subset of products, within this division. Ie: FX, IRD are Product Subsets within the Global Markets Division</description>
    <inlineHelpText>The subset of products, within this division. Ie: FX, IRD are Product Subsets within the Global Markets Division</inlineHelpText>
    <label>Product Subset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Cash Equity</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debt Products</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Investor Services</fullName>
            </value>
            <value>
                <fullName>LC African Product</fullName>
            </value>
            <value>
                <fullName>Local Markets and IRT (IRD)</fullName>
            </value>
            <value>
                <fullName>Money Markets</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Strategic Investments</fullName>
            </value>
            <value>
                <fullName>Structured Finance</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>