force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <label>Share of Wallet</label>
    <referenceTo>Share_Wallet__c</referenceTo>
    <relationshipLabel>Share of Wallet Products</relationshipLabel>
    <relationshipName>Share_of_Wallet_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>