force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Target_Share__c.field-meta.xml
<CustomField>
    <fullName>Target_Share__c</fullName>
    <description>The percentage of the Client&apos;s Estimated Share of Wallet we aim for this Product</description>
    <inlineHelpText>The percentage of the Client&apos;s Estimated Share of Wallet we aim for this Product</inlineHelpText>
    <label>Target Share (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>