force-app/main/default/objects/Share_of_Wallet_Product__c/fields/Tech_SOWProduct_Unique__c.field-meta.xml
<CustomField>
    <fullName>Tech_SOWProduct_Unique__c</fullName>
    <label>Tech SOWProduct Unique</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>